feat(crypt): switch AEAD to AES‑GCM (breaking) (#55)
* refactor: encapsulate NodeClientCore internals

* refactor: remove remaining deprecated API usage

* test: avoid deprecated AESEngine constructor

* test: stop using deprecated PCFBMode factory

* test: eliminate deprecated API usage in tests

* test: share random filler helpers

* simulator: centralize test node parameter creation

* plugin: centralize plugin info lookup

* fix: restore deprecated NodeClientCore fields for legacy plugins

* refactor: surface compiler warnings and drop SortedIntSet

* test: replace deprecated Date ctor in ReceivedCookieTest

* refactor: undeprecate SubConfig internal constructor

* refactor: rely on FCP server API in PluginInfo message

* Revert "refactor: rely on FCP server API in PluginInfo message"

This reverts commit fd83db2d11a32ab4be81bcdf4ceb56001f5e3d4a.

* refactor: remove deprecated NodeStarter globalTestInit overload

* refactor: drop deprecated NodeStarter createTestNode overloads

* refactor(crypt): remove deprecated DSA enum from KeyPairType

- Delete KeyPairType.DSA and its no-arg constructor
- Update KeyGenUtilsTest to drop DSA-only negative cases

BREAKING CHANGE: KeyPairType.DSA is removed; use EC types (ECP256/384/521).

* refactor(crypt): replace vendored OCBBlockCipher_v149 with Bouncy Castle OCB\n\n- Swap to org.bouncycastle.crypto.modes.OCBBlockCipher in AEAD streams\n- Use RFC 7253-compliant 15-byte nonce; update overhead to 31 bytes\n- Delete deprecated OCBBlockCipher_v149.java (vendored BC 1.49 draft impl)\n\nRationale: remove legacy, draft-based OCB copy in favor of maintained BC impl; upstream marked the vendored class deprecated. All tests pass.

* refactor(crypt): remove deprecated Rijndael* types and PCFB handling in CryptByteBuffer

- Drop RijndaelECB and RijndaelECB128 from CryptByteBufferType
- Remove RijndaelPCFB from enum and eliminate Rijndael/PCFB code paths in CryptByteBuffer
- Update CryptByteBufferTest to cover AESCTR/ChaCha128/ChaCha256